--- a/About.html
+++ b/About.html
@@ -7,10 +7,14 @@
   <body>
     <div>
       <p>
-      <i>Gift Quiz Editor</i> was created to help teacher create quiz with <a href="https://docs.moodle.org/23/en/GIFT_format#UTF-8_encoding">GIFT syntaxe</a>.
+      <b>Gift Quiz Editor</b> was created to help teachers create quizzes with the <a href="https://docs.moodle.org/23/en/GIFT_format#UTF-8_encoding">GIFT syntax</a>.
       </p>
+      <p>GIFT is a short, intuitive and normalize syntax used in the Moodle community to create Quiz.
+      It allows to store quiz in a format that can be versionnize, share and easily modified.</p>
       <p>
-      "More in depth text here?"
+      This project was made by Jonathan G.V. with the help of Christopher Fuhrman during a special project done at L'École de technologie supérieure (ETS) de Montréal.
+
+      You can submit issues, requests and comments on the github repository :  <a href="https://github.com/Girardvjonathan/GIFT-google-quiz-plugin">GIFT-google-quiz-plugin</a>.
       </p>
     </div>
   </body>
