Fixed feedback and added Multiple choice multiple response

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -26,12 +26,17 @@
       bottom: 54px;
       top: 0;
     }
-    .good-validation{
+     #error.good-validation{
+      height: 20px;
       color:#008000;
+      overflow-y: hidden;
 
     }
     #error{
-    margin-bottom: 6px;
+     margin-bottom: 6px;
+     height: 100px;
+     overflow-x: hidden;
+     overflow-y: scroll;
     }
 
     .branding-text {
@@ -96,9 +101,13 @@
     <div class="add-sample">
     <select id="sample">
     <option value="TF">True or false</option>
+    <option value="TFF">True or false with feedback</option>
     <option value="MC">Multiple choices</option>
+    <option value="MCMA">Multiple choices multiple good answer</option>
+    <option value="NMS">Numerical question with validation</option>
     <option value="NM">Numerical question</option>
     <option value="ES">Essay</option>
+    <option value="DESC">Description</option>
     </select>
     <button id="add-sample">Add</button>
     </div>
@@ -106,7 +115,7 @@
       <textarea id="gift-code" rows="4" cols="50"><?= giftCode ?></textarea>
 
         <div class="block" id="button-bar">
-          <button class="action" id="validate-gift">Validate</button>
+          <!--button class="action" id="validate-gift">Validate</button-->
           <button class="create" id="create-gift">Create form</button>
           <button class="create" id="append-gift">Append</button>
         </div>
@@ -134,14 +143,25 @@
         if(strUser == 'TF'){
           $('#gift-code').val('The sun rises in the east.{T}\n\n' + $('#gift-code').val());
         }
+        else if(strUser == 'TFF'){
+           $('#gift-code').val("//True or false with feedback\n Grant is buried in Grant's tomb.{FALSE#wrong answer feedback#right answer feedback}\n\n" + $('#gift-code').val());
+        }
         else if(strUser== 'MC'){
           $('#gift-code').val("// multiple choice with specific feedback\n::Q2:: What's between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it's yellow ~blue # wrong, it's yellow}\n\n" + $('#gift-code').val());
         }
+        else if (strUser == 'MCMA'){
+          $('#gift-code').val("// multiple choice with multiple good answer (checkbox)\nWhat two people are entombed in Grant's tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant's wife\n ~%-100%Grant's father\n}\n\n" + $('#gift-code').val());
+        }
+        else if(strUser== 'NMS' ){
+          $('#gift-code').val('// question: 229196  name: Test Numerical\n::Test Numerical::Whats two plus 4?{#\n=%100%6:0#Good job its really 6!\n}\n\n' + $('#gift-code').val());
+        }
         else if(strUser== 'NM' ){
-          $('#gift-code').val('What is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.\n\n' + $('#gift-code').val());
+          $('#gift-code').val('//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.\n\n' + $('#gift-code').val());
         }
         else if(strUser== 'ES' ){
           $('#gift-code').val('Write a short biography of Dag Hammarskjöld. {}\n\n' + $('#gift-code').val());
+        } else if(strUser == 'DESC'){
+          $('#gift-code').val('You can use your pencil and paper for these next math questions.\n\n' + $('#gift-code').val());
         }
         });
         $('#create-gift').click(function(event){
@@ -154,27 +174,11 @@
 
                 })
                 .withFailureHandler(
-                function(msg, element) {
-                showError(msg, $('#gift-code'));
+                function(err, element) {
+                showError(err.message, $('#gift-code'));
                 })
                 .withUserObject(this)
                 .createForm($('#gift-code').val(), true);
-        });
-      $('#validate-gift').click(function(event){
-            $('#error').remove();
-            event.preventDefault();
-                event.stopPropagation();
-                google.script.run
-                .withSuccessHandler(
-                function(msg, element) {
-
-                })
-                .withFailureHandler(
-                function(msg, element) {
-                showError(msg, $('#gift-code'));
-                })
-                .withUserObject(this)
-                .createForm($('#gift-code').val(), false);
         });
       $('#append-gift').click(function(event){
             $('#error').remove();
@@ -187,22 +191,47 @@
                 })
                 .withFailureHandler(
                 function(msg, element) {
-                showError(msg, $('#gift-code'));
+                  showError(msg.toString());
                 })
                 .withUserObject(this)
                 .createForm($('#gift-code').val(), true, true);
         });
       });
 
-      function showError(msg, element) {
+      function showError(msg) {
       if(msg == "Everything looks good!"){
-      var div = $('<div id="error" class="good-validation">' + msg + '</div>');
-        $(element).after(div);
+        var div = $('<div id="error" class="good-validation">' + msg + '</div>');
+        $("#gift-code").after(div);
+      }
+      else if(typeof msg != 'object' && msg.substr(msg.length - 6) == "added."){
+        var div = $('<div id="error" class="good-validation">' + msg + '</div>');
+        $("#gift-code").after(div);
       }
       else {
         var div = $('<div id="error" class="error">' + msg + '</div>');
-        $(element).after(div);
+        $("#gift-code").after(div);
         }
+      }
+
+      var typingTimer;
+      var doneTypingInterval = 2000;
+
+      $('#gift-code').keyup(function(){
+        clearTimeout(typingTimer);
+        if ($('#gift-code').val()) {
+          typingTimer = setTimeout(doneTyping, doneTypingInterval);
+        }
+      });
+
+      function doneTyping () {
+            $('#error').remove();
+                google.script.run
+                .withSuccessHandler()
+                .withFailureHandler(function(msg) {
+                showError(msg, $('#gift-code'));
+                })
+                .withUserObject(this)
+                .createForm($('#gift-code').val(), false);
       }
 
     </script>
