--- a/Sidebar.html
+++ b/Sidebar.html
@@ -187,7 +187,7 @@
     
     <div class="sidebar bottom">
       <img alt="Add-on logo" class="logo" width="25"
-          src="https://g-suite-documentation-images.firebaseapp.com/images/newFormNotificationsicon.png">
+          src="https://lh5.googleusercontent.com/Fy-JGdShtnvP3dC2kTbqBPu6b-hzZgJAp25wnBEnc6JkGdlomvqxQkYSMdLqDyx--oQliwRVuA=w16383">
       <span class="gray branding-text">GIFT Quiz Editor by Jonathan G.V. and C. Fuhrman</span>
     </div>
     
