--- a/Sidebar.html
+++ b/Sidebar.html
@@ -188,7 +188,7 @@
     <div class="sidebar bottom">
       <img alt="Add-on logo" class="logo" width="25"
           src="https://lh5.googleusercontent.com/Fy-JGdShtnvP3dC2kTbqBPu6b-hzZgJAp25wnBEnc6JkGdlomvqxQkYSMdLqDyx--oQliwRVuA=w16383">
-      <span class="gray branding-text">GIFT Quiz Editor by Jonathan G.V. and C. Fuhrman</span>
+      <span class="gray branding-text">GIFT Quiz Editor by fuhrmanator</span>
     </div>
     
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
