--- a/SidebarJS.html
+++ b/SidebarJS.html
@@ -1,5 +1,17 @@
 <script>
 var LOADING_CLASS_CSS = 'lds-ellipsis';
+// GAS doesn't grok Map() at least I couldn't get it to work
+const sampleMap = {};
+    sampleMap['DESC'] = '::Instructions::\nYou can use your pencil and paper for these next math questions.';
+    sampleMap['TF'] = 'The sun rises in the east.{T}';
+    sampleMap['TFF'] = '//True or false with feedback\nGrant is buried in Grant\'s tomb.{FALSE#wrong answer feedback\N#right answer feedback}';
+    sampleMap['MC'] = '// multiple choice with specific feedback\n::Q2:: What\'s between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it\'s yellow ~blue # wrong, it\'s yellow}';
+    sampleMap['MCMA'] = '// multiple choice with multiple correct answers, different weights(checkbox)\nWhat two people are entombed in Grant\'s tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant\'s wife\n ~%-100%Grant\'s father\n}';
+    sampleMap['NMS'] = '// Numerical question\n::Numerical question::\nWhat\'s two plus four?\n{#\n=%100%6:0#Good job it IS 6!\n}';
+    sampleMap['NM'] = '//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.';
+    sampleMap['SA'] = 'Two plus two equals {=four =4}';
+    sampleMap['MATCH'] = 'Match the following countries with their corresponding capitals. {\n=Canada -> Ottawa\n=Italy  -> Rome\n=Japan  -> Tokyo\n=India  -> New Delhi\n}';
+    sampleMap['ES'] = 'Write a short biography of Dag Hammarskjöld. {}';
 /**
  * On document load, assign required handlers to each element,
  * and attempt to load any saved settings.
@@ -7,24 +19,26 @@ var LOADING_CLASS_CSS = 'lds-ellipsis';
 $(function () {
     $('#add-sample').click(function (event) {
         var e = document.getElementById("sample");
-        var strUser = e.options[e.selectedIndex].value;
-        if (strUser == 'TF') {
-            $('#gift-code').val('The sun rises in the east.{T}\n\n' + $('#gift-code').val());
-        } else if (strUser == 'TFF') {
-            $('#gift-code').val("//True or false with feedback\n Grant is buried in Grant's tomb.{FALSE#wrong answer feedback#right answer feedback}\n\n" + $('#gift-code').val());
-        } else if (strUser == 'MC') {
-            $('#gift-code').val("// multiple choice with specific feedback\n::Q2:: What's between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it's yellow ~blue # wrong, it's yellow}\n\n" + $('#gift-code').val());
-        } else if (strUser == 'MCMA') {
-            $('#gift-code').val("// multiple choice with multiple good answer (checkbox)\nWhat two people are entombed in Grant's tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant's wife\n ~%-100%Grant's father\n}\n\n" + $('#gift-code').val());
-        } else if (strUser == 'NMS') {
-            $('#gift-code').val('// question: 229196  name: Test Numerical\n::Test Numerical::Whats two plus 4?{#\n=%100%6:0#Good job its really 6!\n}\n\n' + $('#gift-code').val());
-        } else if (strUser == 'NM') {
-            $('#gift-code').val('//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.\n\n' + $('#gift-code').val());
-        } else if (strUser == 'ES') {
-            $('#gift-code').val('Write a short biography of Dag Hammarskjöld. {}\n\n' + $('#gift-code').val());
-        } else if (strUser == 'DESC') {
-            $('#gift-code').val('You can use your pencil and paper for these next math questions.\n\n' + $('#gift-code').val());
-        }
+        var chosenSampleKey = e.options[e.selectedIndex].value;
+        // if (strUser == 'DESC') {
+        //     toAdd = '::Instructions::\nYou can use your pencil and paper for these next math questions.\n\n';
+        // } else if (strUser == 'TF') {
+        //     $('#gift-code').val('The sun rises in the east.{T}\n\n' + $('#gift-code').val());
+        // } else if (strUser == 'TFF') {
+        //     $('#gift-code').val("//True or false with feedback\nGrant is buried in Grant's tomb.{FALSE#wrong answer feedback\N#right answer feedback}\n\n" + $('#gift-code').val());
+        // } else if (strUser == 'MC') {
+        //     $('#gift-code').val("// multiple choice with specific feedback\n::Q2:: What's between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it's yellow ~blue # wrong, it's yellow}\n\n" + $('#gift-code').val());
+        // } else if (strUser == 'MCMA') {
+        //     $('#gift-code').val("// multiple choice with multiple good answer (checkbox)\nWhat two people are entombed in Grant's tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant's wife\n ~%-100%Grant's father\n}\n\n" + $('#gift-code').val());
+        // } else if (strUser == 'NMS') {
+        //     $('#gift-code').val('// question: 229196  name: Test Numerical\n::Test Numerical::Whats two plus 4?{#\n=%100%6:0#Good job its really 6!\n}\n\n' + $('#gift-code').val());
+        // } else if (strUser == 'NM') {
+        //     $('#gift-code').val('//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.\n\n' + $('#gift-code').val());
+        // } else if (strUser == 'ES') {
+        //     $('#gift-code').val('Write a short biography of Dag Hammarskjöld. {}\n\n' + $('#gift-code').val());
+        // }
+        $('#gift-code').val($('#gift-code').val() + '\n\n' + sampleMap[chosenSampleKey] + '\n\n');
+
     });
     $('#create-gift').click(function (event) {
         $('#error').remove();
