Removed global initializing, variables

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -198,7 +198,7 @@
       <button id="add-sample">Add</button>
     </div>
     <form>
-      <textarea id="gift-code" rows="4" cols="50"><?= giftCode ?></textarea>
+      <textarea id="gift-code" rows="4" cols="50"><?= giftSourceText ?></textarea>
 
       <div class="block" id="button-bar">
         <!--button class="action" id="validate-gift">Validate</button-->
