--- a/SidebarJS.html
+++ b/SidebarJS.html
@@ -1,167 +1,156 @@
 <script>
-var LOADING_CLASS_CSS = 'lds-ellipsis';
-// GAS doesn't grok Map() at least I couldn't get it to work
-const sampleMap = {};
+    var LOADING_CLASS_CSS = 'lds-ellipsis';
+    // GAS doesn't grok Map() at least I couldn't get it to work
+    const sampleMap = {};
     sampleMap['DESC'] = '::Instructions::\nYou can use your pencil and paper for these next math questions.';
     sampleMap['TF'] = 'The sun rises in the east.{T}';
-    sampleMap['TFF'] = '//True or false with feedback\nGrant is buried in Grant\'s tomb.{FALSE#wrong answer feedback\N#right answer feedback}';
-    sampleMap['MC'] = '// multiple choice with specific feedback\n::Q2:: What\'s between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it\'s yellow ~blue # wrong, it\'s yellow}';
-    sampleMap['MCMA'] = '// multiple choice with multiple correct answers, different weights(checkbox)\nWhat two people are entombed in Grant\'s tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant\'s wife\n ~%-100%Grant\'s father\n}';
-    sampleMap['NMS'] = '// Numerical question\n::Numerical question::\nWhat\'s two plus four?\n{#\n=%100%6:0#Good job it IS 6!\n}';
-    sampleMap['NM'] = '//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.';
+    sampleMap['TFF'] =
+        '//True or false with feedback\nGrant is buried in Grant\'s tomb.{FALSE#wrong answer feedback\N#right answer feedback}';
+    sampleMap['MC'] =
+        '// multiple choice with specific feedback\n::Q2:: What\'s between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it\'s yellow ~blue # wrong, it\'s yellow}';
+    sampleMap['MCMA'] =
+        '// multiple choice with multiple correct answers, different weights(checkbox)\nWhat two people are entombed in Grant\'s tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant\'s wife\n ~%-100%Grant\'s father\n}';
+    sampleMap['NMS'] =
+        '// Numerical question\n::Numerical question::\nWhat\'s two plus four?\n{#\n=%100%6:0#Good job it IS 6!\n}';
+    sampleMap['NM'] =
+        '//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.';
     sampleMap['SA'] = 'Two plus two equals {=four =4}';
-    sampleMap['MATCH'] = 'Match the following countries with their corresponding capitals. {\n=Canada -> Ottawa\n=Italy  -> Rome\n=Japan  -> Tokyo\n=India  -> New Delhi\n}';
+    sampleMap['MATCH'] =
+        'Match the following countries with their corresponding capitals. {\n=Canada -> Ottawa\n=Italy  -> Rome\n=Japan  -> Tokyo\n=India  -> New Delhi\n}';
     sampleMap['ES'] = 'Write a short biography of Dag Hammarskjöld. {}';
-/**
- * On document load, assign required handlers to each element,
- * and attempt to load any saved settings.
- */
-$(function () {
-    $('#add-sample').click(function (event) {
-        var e = document.getElementById("sample");
-        var chosenSampleKey = e.options[e.selectedIndex].value;
-        // if (strUser == 'DESC') {
-        //     toAdd = '::Instructions::\nYou can use your pencil and paper for these next math questions.\n\n';
-        // } else if (strUser == 'TF') {
-        //     $('#gift-code').val('The sun rises in the east.{T}\n\n' + $('#gift-code').val());
-        // } else if (strUser == 'TFF') {
-        //     $('#gift-code').val("//True or false with feedback\nGrant is buried in Grant's tomb.{FALSE#wrong answer feedback\N#right answer feedback}\n\n" + $('#gift-code').val());
-        // } else if (strUser == 'MC') {
-        //     $('#gift-code').val("// multiple choice with specific feedback\n::Q2:: What's between orange and green in the spectrum?\n{=yellow # correct! ~red # wrong, it's yellow ~blue # wrong, it's yellow}\n\n" + $('#gift-code').val());
-        // } else if (strUser == 'MCMA') {
-        //     $('#gift-code').val("// multiple choice with multiple good answer (checkbox)\nWhat two people are entombed in Grant's tomb? {\n~%-100%No one\n~%50%Grant # yup its good\n~%50%Grant's wife\n ~%-100%Grant's father\n}\n\n" + $('#gift-code').val());
-        // } else if (strUser == 'NMS') {
-        //     $('#gift-code').val('// question: 229196  name: Test Numerical\n::Test Numerical::Whats two plus 4?{#\n=%100%6:0#Good job its really 6!\n}\n\n' + $('#gift-code').val());
-        // } else if (strUser == 'NM') {
-        //     $('#gift-code').val('//Custom Validation not yet supported\nWhat is the value of pi (to 3 decimal places)? {#3.1415:0.0005}.\n\n' + $('#gift-code').val());
-        // } else if (strUser == 'ES') {
-        //     $('#gift-code').val('Write a short biography of Dag Hammarskjöld. {}\n\n' + $('#gift-code').val());
-        // }
-        $('#gift-code').val($('#gift-code').val() + '\n\n' + sampleMap[chosenSampleKey] + '\n\n');
-
+    /**
+     * On document load, assign required handlers to each element,
+     * and attempt to load any saved settings.
+     */
+    $(function () {
+        $('#add-sample').click(function (event) {
+            var e = document.getElementById("sample");
+            var chosenSampleKey = e.options[e.selectedIndex].value;
+            $('#gift-code').val($('#gift-code').val() + '\n\n' + sampleMap[chosenSampleKey] + '\n\n');
+        });
+        $('#create-gift').click(function (event) {
+            $('#error').remove();
+            showAlert("info", "Processing GIFT...");
+            $('#create-gift').prop('disabled', true);
+            $('#append-gift').prop('disabled', true);
+            $('#loading').addClass(LOADING_CLASS_CSS);
+            event.preventDefault();
+            event.stopPropagation();
+            google.script.run
+                .withSuccessHandler(
+                    function (msg, element) {
+                        $('#create-gift').prop('disabled', false);
+                        $('#append-gift').prop('disabled', false);
+                        $('#error').remove();
+                        $('#loading').removeClass(LOADING_CLASS_CSS);
+                        showAlert("success", "Form successfully created.");
+                    })
+                .withFailureHandler(
+                    function (err, element) {
+                        $('#create-gift').prop('disabled', false);
+                        $('#append-gift').prop('disabled', false);
+                        $('#error').remove();
+                        $('#loading').removeClass(LOADING_CLASS_CSS);
+                        showAlert("error", err.message);
+                    })
+                .withUserObject(this)
+                .createForm($('#gift-code').val(), false); // don't append
+        });
+        $('#append-gift').click(function (event) {
+            $('#error').remove();
+            showAlert("info", "Processing GIFT...");
+            $('#create-gift').prop('disabled', true);
+            $('#append-gift').prop('disabled', true);
+            $('#loading').addClass(LOADING_CLASS_CSS);
+            event.preventDefault();
+            event.stopPropagation();
+            google.script.run
+                .withSuccessHandler(
+                    function (msg, element) {
+                        $('#create-gift').prop('disabled', false);
+                        $('#append-gift').prop('disabled', false);
+                        $('#error').remove();
+                        $('#loading').removeClass(LOADING_CLASS_CSS);
+                        showAlert("success", "Form successfully created.");
+                    })
+                .withFailureHandler(
+                    function (msg, element) {
+                        $('#create-gift').prop('disabled', false);
+                        $('#append-gift').prop('disabled', false);
+                        $('#error').remove();
+                        $('#loading').removeClass(LOADING_CLASS_CSS);
+                        showAlert("error", msg.toString());
+                    })
+                .withUserObject(this)
+                .createForm($('#gift-code').val(), true); // append
+        });
     });
-    $('#create-gift').click(function (event) {
-        $('#error').remove();
-        showAlert("info","Processing GIFT...");
-        $('#create-gift').prop('disabled', true);
-        $('#append-gift').prop('disabled', true);
-        $('#loading').addClass(LOADING_CLASS_CSS);
-        event.preventDefault();
-        event.stopPropagation();
-        google.script.run
-            .withSuccessHandler(
-                function (msg, element) {
-                    $('#create-gift').prop('disabled', false);
-                    $('#append-gift').prop('disabled', false);
-                    $('#error').remove();
-                    $('#loading').removeClass(LOADING_CLASS_CSS);
-                    showAlert("success", "Form successfully created.");
-                })
-            .withFailureHandler(
-                function (err, element) {
-                    $('#create-gift').prop('disabled', false);
-                    $('#append-gift').prop('disabled', false);
-                    $('#error').remove();
-                    $('#loading').removeClass(LOADING_CLASS_CSS);
-                    showAlert("error", err.message);
-                })
-            .withUserObject(this)
-            .createForm($('#gift-code').val(), false);  // don't append
-    });
-    $('#append-gift').click(function (event) {
-        $('#error').remove();
-        showAlert("info","Processing GIFT...");
-        $('#create-gift').prop('disabled', true);
-        $('#append-gift').prop('disabled', true);
-        $('#loading').addClass(LOADING_CLASS_CSS);
-        event.preventDefault();
-        event.stopPropagation();
-        google.script.run
-            .withSuccessHandler(
-                function (msg, element) {
-                    $('#create-gift').prop('disabled', false);
-                    $('#append-gift').prop('disabled', false);
-                    $('#error').remove();
-                    $('#loading').removeClass(LOADING_CLASS_CSS);
-                    showAlert("success", "Form successfully created.");
-                })
-            .withFailureHandler(
-                function (msg, element) {
-                    $('#create-gift').prop('disabled', false);
-                    $('#append-gift').prop('disabled', false);
-                    $('#error').remove();
-                    $('#loading').removeClass(LOADING_CLASS_CSS);
-                    showAlert("error", msg.toString());
-                })
-            .withUserObject(this)
-            .createForm($('#gift-code').val(), true);  // append
-    });
-});
 
-/**
- * Inserts a div that contains an error message after a given element.
- *
- * @param msg The error message to display.
- * @param element The element after which to display the error.
- */
-function showAlert(msgClass, msg, element) {
-  if (!element) {
-    element = $('#button-bar');
-  }
-  var div = $('<div id="error" class="'+ msgClass + '">' + msg + '</div>');
-  $(element).after(div);
-  console.log("ShowAlert: " + msgClass + " " + msg);
-}
-
-var typingTimer;
-var doneTypingInterval = 1000;
-
-$('#gift-code').keyup(function () {
-    $("#error").remove();
-    clearTimeout(typingTimer);
-    if ($('#gift-code').val()) {
-        typingTimer = setTimeout(doneTyping, doneTypingInterval);
-    }
-});
-
-function doneTyping() {
-    $('#error').remove();
-    var giftText = $('#gift-code').val();
-    showAlert("info","Validating GIFT...");
-
-    try {
-        var output = giftParser.parse(giftText);
-        $('#error').remove();
-        showAlert("success","Recognized " + output.length + " questions from GIFT.");
-    } catch (e) {
-        $('#error').remove();
-        showAlert("error",buildErrorMessage(giftText, e));
+    /**
+     * Inserts a div that contains an error message after a given element.
+     *
+     * @param msg The error message to display.
+     * @param element The element after which to display the error.
+     */
+    function showAlert(msgClass, msg, element) {
+        if (!element) {
+            element = $('#button-bar');
+        }
+        var div = $('<div id="error" class="' + msgClass + '">' + msg + '</div>');
+        $(element).after(div);
+        console.log("ShowAlert: " + msgClass + " " + msg);
     }
 
-}
+    var typingTimer;
+    var doneTypingInterval = 1000;
 
-function buildErrorMessage(giftStr, err) {
-  var delta = 10;
-  var badGIFT = "";
-  var index = err.location.start.offset;
-  var paddingBefore = "";
-  var paddingAfter = "";
-  var underlinedText = "<u>" + giftStr.substring(err.location.start.offset, err.location.end.offset + 1) + "</u>";
+    $('#gift-code').keyup(function () {
+        $("#error").remove();
+        clearTimeout(typingTimer);
+        if ($('#gift-code').val()) {
+            typingTimer = setTimeout(doneTyping, doneTypingInterval);
+        }
+    });
 
-  if (err.location.start.offset - delta > 0) {
-    paddingBefore = giftStr.substring(err.location.start.offset - delta, err.location.start.offset - 1);
-  } else if (err.location.start.offset != 0) {
-    paddingBefore = giftStr.substring(0, err.location.start.offset - 1);
-  }
+    function doneTyping() {
+        $('#error').remove();
+        var giftText = $('#gift-code').val();
+        showAlert("info", "Validating GIFT...");
 
-  if (err.location.end.offset + delta < giftStr.length) {
-    paddingAfter = giftStr.substring(err.location.end.offset + 2, err.location.end.offset + delta);
-  } else if (err.location.end.offset != giftStr.length) {
-    paddingAfter = giftStr.substring(err.location.end.offset + 2, giftStr.length);
-  }
+        try {
+            var output = giftParser.parse(giftText);
+            $('#error').remove();
+            showAlert("success", "Recognized " + output.length + " questions from GIFT.");
+        } catch (e) {
+            $('#error').remove();
+            showAlert("error", buildErrorMessage(giftText, e));
+        }
 
-  badGIFT = paddingBefore + underlinedText + paddingAfter;
-  return "Line " + parseInt(err.location.start.line) + ", column " + parseInt(err.location.start.column) + " near:<b> " + badGIFT + "</b><br> " + err.message;
+    }
 
-}    
+    function buildErrorMessage(giftStr, err) {
+        var delta = 10;
+        var badGIFT = "";
+        var index = err.location.start.offset;
+        var paddingBefore = "";
+        var paddingAfter = "";
+        var underlinedText = "<u>" + giftStr.substring(err.location.start.offset, err.location.end.offset + 1) + "</u>";
+
+        if (err.location.start.offset - delta > 0) {
+            paddingBefore = giftStr.substring(err.location.start.offset - delta, err.location.start.offset - 1);
+        } else if (err.location.start.offset != 0) {
+            paddingBefore = giftStr.substring(0, err.location.start.offset - 1);
+        }
+
+        if (err.location.end.offset + delta < giftStr.length) {
+            paddingAfter = giftStr.substring(err.location.end.offset + 2, err.location.end.offset + delta);
+        } else if (err.location.end.offset != giftStr.length) {
+            paddingAfter = giftStr.substring(err.location.end.offset + 2, giftStr.length);
+        }
+
+        badGIFT = paddingBefore + underlinedText + paddingAfter;
+        return "Line " + parseInt(err.location.start.line) + ", column " + parseInt(err.location.start.column) +
+            " near:<b> " + badGIFT + "</b><br> " + err.message;
+
+    }
 </script>
