--- a/Sidebar.html
+++ b/Sidebar.html
@@ -217,7 +217,7 @@
 
   <div class="sidebar bottom">
     <img alt="Add-on logo" class="logo" width="25"
-      src="https://lh3.googleusercontent.com/jl3ie_LSJWiglM3Vt6mvbFX4_WrYG_RXFL2chuMGYO-BqHaMcaWkm2cMShhqYWtsXt7m3w0=w1280">
+      src="https://drive.google.com/uc?id=1T5Ul-xMkromAOx_cKAoEofZ7D8QxTj7L">
     <span class="gray branding-text">GIFT Quiz Editor by fuhrmanator</span>
   </div>
 
