--- a/About.html
+++ b/About.html
@@ -8,6 +8,8 @@
 
 <body>
   <div>
+    <p><img src="https://drive.google.com/uc?id=1T5Ul-xMkromAOx_cKAoEofZ7D8QxTj7L" width="64px">
+    </p>
     <p>
       <b>GIFT Quiz Editor</b> was created to help instructors create quizzes with the <a
         href="https://en.wikipedia.org/wiki/GIFT_(file_format)">GIFT syntax</a>.
