--- a/gift-parser-globalsJS.html
+++ b/gift-parser-globalsJS.html
@@ -309,32 +309,34 @@
         peg$c124 = peg$otherExpectation("(formatted text)"),
         peg$c125 = peg$otherExpectation("(unformatted text)"),
         peg$c126 = function(txt) { return removeNewLinesDuplicateSpaces(txt.join('').trim())},
-        peg$c127 = function(chars, frac) { return parseFloat(chars.join('') + frac); },
-        peg$c128 = ".",
-        peg$c129 = peg$literalExpectation(".", false),
-        peg$c130 = function(chars) { return "." + chars.join(''); },
-        peg$c131 = "####",
-        peg$c132 = peg$literalExpectation("####", false),
-        peg$c133 = function(rt) {return rt;},
-        peg$c134 = peg$otherExpectation("(single line whitespace)"),
-        peg$c135 = peg$otherExpectation("(multiple line whitespace)"),
-        peg$c136 = peg$otherExpectation("(comment)"),
-        peg$c137 = "//",
-        peg$c138 = peg$literalExpectation("//", false),
-        peg$c139 = function() {return null},
-        peg$c140 = peg$otherExpectation("(space)"),
-        peg$c141 = " ",
-        peg$c142 = peg$literalExpectation(" ", false),
-        peg$c143 = "\t",
-        peg$c144 = peg$literalExpectation("\t", false),
-        peg$c145 = peg$otherExpectation("(end of line)"),
-        peg$c146 = "\r\n",
-        peg$c147 = peg$literalExpectation("\r\n", false),
-        peg$c148 = "\n",
-        peg$c149 = peg$literalExpectation("\n", false),
-        peg$c150 = "\r",
-        peg$c151 = peg$literalExpectation("\r", false),
-        peg$c152 = function() { return "EOF"; },
+        peg$c127 = peg$otherExpectation("(category text)"),
+        peg$c128 = function(txt) { return txt.flat().join('') },
+        peg$c129 = function(chars, frac) { return parseFloat(chars.join('') + frac); },
+        peg$c130 = ".",
+        peg$c131 = peg$literalExpectation(".", false),
+        peg$c132 = function(chars) { return "." + chars.join(''); },
+        peg$c133 = "####",
+        peg$c134 = peg$literalExpectation("####", false),
+        peg$c135 = function(rt) {return rt;},
+        peg$c136 = peg$otherExpectation("(single line whitespace)"),
+        peg$c137 = peg$otherExpectation("(multiple line whitespace)"),
+        peg$c138 = peg$otherExpectation("(comment)"),
+        peg$c139 = "//",
+        peg$c140 = peg$literalExpectation("//", false),
+        peg$c141 = function() {return null},
+        peg$c142 = peg$otherExpectation("(space)"),
+        peg$c143 = " ",
+        peg$c144 = peg$literalExpectation(" ", false),
+        peg$c145 = "\t",
+        peg$c146 = peg$literalExpectation("\t", false),
+        peg$c147 = peg$otherExpectation("(end of line)"),
+        peg$c148 = "\r\n",
+        peg$c149 = peg$literalExpectation("\r\n", false),
+        peg$c150 = "\n",
+        peg$c151 = peg$literalExpectation("\n", false),
+        peg$c152 = "\r",
+        peg$c153 = peg$literalExpectation("\r", false),
+        peg$c154 = function() { return "EOF"; },
 
         peg$currPos          = 0,
         peg$savedPos         = 0,
@@ -547,7 +549,7 @@
           if (s3 !== peg$FAILED) {
             s4 = peg$parse_();
             if (s4 !== peg$FAILED) {
-              s5 = peg$parsePlainText();
+              s5 = peg$parseCategoryText();
               if (s5 !== peg$FAILED) {
                 s6 = peg$parseQuestionSeparator();
                 if (s6 !== peg$FAILED) {
@@ -2622,6 +2624,110 @@
       return s0;
     }
 
+    function peg$parseCategoryText() {
+      var s0, s1, s2, s3, s4;
+
+      peg$silentFails++;
+      s0 = peg$currPos;
+      s1 = [];
+      s2 = peg$currPos;
+      s3 = peg$currPos;
+      peg$silentFails++;
+      s4 = peg$parseEndOfLine();
+      peg$silentFails--;
+      if (s4 === peg$FAILED) {
+        s3 = void 0;
+      } else {
+        peg$currPos = s3;
+        s3 = peg$FAILED;
+      }
+      if (s3 !== peg$FAILED) {
+        if (input.length > peg$currPos) {
+          s4 = input.charAt(peg$currPos);
+          peg$currPos++;
+        } else {
+          s4 = peg$FAILED;
+          if (peg$silentFails === 0) { peg$fail(peg$c120); }
+        }
+        if (s4 !== peg$FAILED) {
+          s3 = [s3, s4];
+          s2 = s3;
+        } else {
+          peg$currPos = s2;
+          s2 = peg$FAILED;
+        }
+      } else {
+        peg$currPos = s2;
+        s2 = peg$FAILED;
+      }
+      while (s2 !== peg$FAILED) {
+        s1.push(s2);
+        s2 = peg$currPos;
+        s3 = peg$currPos;
+        peg$silentFails++;
+        s4 = peg$parseEndOfLine();
+        peg$silentFails--;
+        if (s4 === peg$FAILED) {
+          s3 = void 0;
+        } else {
+          peg$currPos = s3;
+          s3 = peg$FAILED;
+        }
+        if (s3 !== peg$FAILED) {
+          if (input.length > peg$currPos) {
+            s4 = input.charAt(peg$currPos);
+            peg$currPos++;
+          } else {
+            s4 = peg$FAILED;
+            if (peg$silentFails === 0) { peg$fail(peg$c120); }
+          }
+          if (s4 !== peg$FAILED) {
+            s3 = [s3, s4];
+            s2 = s3;
+          } else {
+            peg$currPos = s2;
+            s2 = peg$FAILED;
+          }
+        } else {
+          peg$currPos = s2;
+          s2 = peg$FAILED;
+        }
+      }
+      if (s1 !== peg$FAILED) {
+        s2 = peg$currPos;
+        peg$silentFails++;
+        s3 = peg$parseEndOfLine();
+        if (s3 === peg$FAILED) {
+          s3 = peg$parseEndOfFile();
+        }
+        peg$silentFails--;
+        if (s3 !== peg$FAILED) {
+          peg$currPos = s2;
+          s2 = void 0;
+        } else {
+          s2 = peg$FAILED;
+        }
+        if (s2 !== peg$FAILED) {
+          peg$savedPos = s0;
+          s1 = peg$c128(s1);
+          s0 = s1;
+        } else {
+          peg$currPos = s0;
+          s0 = peg$FAILED;
+        }
+      } else {
+        peg$currPos = s0;
+        s0 = peg$FAILED;
+      }
+      peg$silentFails--;
+      if (s0 === peg$FAILED) {
+        s1 = peg$FAILED;
+        if (peg$silentFails === 0) { peg$fail(peg$c127); }
+      }
+
+      return s0;
+    }
+
     function peg$parseNumber() {
       var s0, s1, s2;
 
@@ -2655,7 +2761,7 @@
         }
         if (s2 !== peg$FAILED) {
           peg$savedPos = s0;
-          s1 = peg$c127(s1, s2);
+          s1 = peg$c129(s1, s2);
           s0 = s1;
         } else {
           peg$currPos = s0;
@@ -2674,21 +2780,21 @@
 
       s0 = peg$currPos;
       if (input.charCodeAt(peg$currPos) === 46) {
-        s1 = peg$c128;
+        s1 = peg$c130;
         peg$currPos++;
       } else {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c129); }
+        if (peg$silentFails === 0) { peg$fail(peg$c131); }
       }
       if (s1 !== peg$FAILED) {
         s2 = peg$currPos;
         peg$silentFails++;
         if (input.charCodeAt(peg$currPos) === 46) {
-          s3 = peg$c128;
+          s3 = peg$c130;
           peg$currPos++;
         } else {
           s3 = peg$FAILED;
-          if (peg$silentFails === 0) { peg$fail(peg$c129); }
+          if (peg$silentFails === 0) { peg$fail(peg$c131); }
         }
         peg$silentFails--;
         if (s3 === peg$FAILED) {
@@ -2718,7 +2824,7 @@
           }
           if (s3 !== peg$FAILED) {
             peg$savedPos = s0;
-            s1 = peg$c130(s3);
+            s1 = peg$c132(s3);
             s0 = s1;
           } else {
             peg$currPos = s0;
@@ -2740,12 +2846,12 @@
       var s0, s1, s2, s3, s4;
 
       s0 = peg$currPos;
-      if (input.substr(peg$currPos, 4) === peg$c131) {
-        s1 = peg$c131;
+      if (input.substr(peg$currPos, 4) === peg$c133) {
+        s1 = peg$c133;
         peg$currPos += 4;
       } else {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c132); }
+        if (peg$silentFails === 0) { peg$fail(peg$c134); }
       }
       if (s1 !== peg$FAILED) {
         s2 = peg$parse_();
@@ -2755,7 +2861,7 @@
             s4 = peg$parse_();
             if (s4 !== peg$FAILED) {
               peg$savedPos = s0;
-              s1 = peg$c133(s3);
+              s1 = peg$c135(s3);
               s0 = s1;
             } else {
               peg$currPos = s0;
@@ -2842,7 +2948,7 @@
       peg$silentFails--;
       if (s0 === peg$FAILED) {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c134); }
+        if (peg$silentFails === 0) { peg$fail(peg$c136); }
       }
 
       return s0;
@@ -2873,7 +2979,7 @@
       peg$silentFails--;
       if (s0 === peg$FAILED) {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c135); }
+        if (peg$silentFails === 0) { peg$fail(peg$c137); }
       }
 
       return s0;
@@ -2884,12 +2990,12 @@
 
       peg$silentFails++;
       s0 = peg$currPos;
-      if (input.substr(peg$currPos, 2) === peg$c137) {
-        s1 = peg$c137;
+      if (input.substr(peg$currPos, 2) === peg$c139) {
+        s1 = peg$c139;
         peg$currPos += 2;
       } else {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c138); }
+        if (peg$silentFails === 0) { peg$fail(peg$c140); }
       }
       if (s1 !== peg$FAILED) {
         s2 = [];
@@ -2972,7 +3078,7 @@
           }
           if (s3 !== peg$FAILED) {
             peg$savedPos = s0;
-            s1 = peg$c139();
+            s1 = peg$c141();
             s0 = s1;
           } else {
             peg$currPos = s0;
@@ -2989,7 +3095,7 @@
       peg$silentFails--;
       if (s0 === peg$FAILED) {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c136); }
+        if (peg$silentFails === 0) { peg$fail(peg$c138); }
       }
 
       return s0;
@@ -3000,25 +3106,25 @@
 
       peg$silentFails++;
       if (input.charCodeAt(peg$currPos) === 32) {
-        s0 = peg$c141;
+        s0 = peg$c143;
         peg$currPos++;
       } else {
         s0 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c142); }
+        if (peg$silentFails === 0) { peg$fail(peg$c144); }
       }
       if (s0 === peg$FAILED) {
         if (input.charCodeAt(peg$currPos) === 9) {
-          s0 = peg$c143;
+          s0 = peg$c145;
           peg$currPos++;
         } else {
           s0 = peg$FAILED;
-          if (peg$silentFails === 0) { peg$fail(peg$c144); }
+          if (peg$silentFails === 0) { peg$fail(peg$c146); }
         }
       }
       peg$silentFails--;
       if (s0 === peg$FAILED) {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c140); }
+        if (peg$silentFails === 0) { peg$fail(peg$c142); }
       }
 
       return s0;
@@ -3028,35 +3134,35 @@
       var s0, s1;
 
       peg$silentFails++;
-      if (input.substr(peg$currPos, 2) === peg$c146) {
-        s0 = peg$c146;
+      if (input.substr(peg$currPos, 2) === peg$c148) {
+        s0 = peg$c148;
         peg$currPos += 2;
       } else {
         s0 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c147); }
+        if (peg$silentFails === 0) { peg$fail(peg$c149); }
       }
       if (s0 === peg$FAILED) {
         if (input.charCodeAt(peg$currPos) === 10) {
-          s0 = peg$c148;
+          s0 = peg$c150;
           peg$currPos++;
         } else {
           s0 = peg$FAILED;
-          if (peg$silentFails === 0) { peg$fail(peg$c149); }
+          if (peg$silentFails === 0) { peg$fail(peg$c151); }
         }
         if (s0 === peg$FAILED) {
           if (input.charCodeAt(peg$currPos) === 13) {
-            s0 = peg$c150;
+            s0 = peg$c152;
             peg$currPos++;
           } else {
             s0 = peg$FAILED;
-            if (peg$silentFails === 0) { peg$fail(peg$c151); }
+            if (peg$silentFails === 0) { peg$fail(peg$c153); }
           }
         }
       }
       peg$silentFails--;
       if (s0 === peg$FAILED) {
         s1 = peg$FAILED;
-        if (peg$silentFails === 0) { peg$fail(peg$c145); }
+        if (peg$silentFails === 0) { peg$fail(peg$c147); }
       }
 
       return s0;
@@ -3084,7 +3190,7 @@
       }
       if (s1 !== peg$FAILED) {
         peg$savedPos = s0;
-        s1 = peg$c152();
+        s1 = peg$c154();
       }
       s0 = s1;
 
