Fixes #18, better result reporting, refactoring

--- a/Sidebar.html
+++ b/Sidebar.html
@@ -202,8 +202,8 @@
 
       <div class="block" id="button-bar">
         <!--button class="action" id="validate-gift">Validate</button-->
-        <button class="create" id="create-gift">Create form</button>
-        <button id="append-gift">Append</button>
+        <button class="create" title="Replace the current form with GIFT questions" id="create-gift">Replace form</button>
+        <button title="Append GIFT questions to end of current form" id="append-gift">Append to form</button>
         <div id="loading">
           <div></div>
           <div></div>
